Fix cursor selector cursors not centered for iOS Safari

--- a/app/src/components/CursorSelector/style.module.scss
+++ b/app/src/components/CursorSelector/style.module.scss
@@ -6,8 +6,9 @@
 	&__item {
 		aspect-ratio: 1;
 		flex: 1;
-		display: grid;
-		place-items: center;
+		display: flex;
+		align-items: center;
+		justify-content: center;
 		background-color: var(--surface);
 		border: 2px solid var(--surface);
 
